jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jenkins
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
  name: jenkins
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - jenkins.vuthehuyht.tech
    secretName: jenkins-tls-cert
  rules:
  - host: jenkins.vuthehuyht.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
